src/executargramatica/lingaguemmodel/LinguagemParser.java
// Generated from .\Linguagem.g4 by ANTLR 4.7.2
package executargramatica.lingaguemmodel;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LinguagemParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INICIO=1, FIM=2, BREAK=3, DEFINE=4, INT=5, STRING=6, CHAR=7, BOOLEAN=8, 
		FLOAT=9, DOUBLE=10, VOID=11, IF=12, ELSEIF=13, ELSE=14, TRY=15, CATCH=16, 
		ENDIF=17, SWITCH=18, CASE=19, DEFAULTCASE=20, FOR=21, WHILE=22, DO=23, 
		SOMA=24, SUB=25, MULT=26, DIV=27, RESTO=28, ATRIBU=29, IGUAL=30, MENOQ=31, 
		MAIOQ=32, MENOIG=33, MAIOIG=34, DIF=35, EE=36, OUOU=37, NEGA=38, TRUE=39, 
		FALSE=40, BIT_PD=41, BIT_PE=42, BIT_AND=43, BIT_OR=44, BIT_NOT=45, BIT_XOR=46, 
		N_DOUBLE=47, N_FLOAT=48, N_BIN=49, N_INT=50, N_HEX=51, E_STRING=52, E_CHAR=53, 
		C_LINHA=54, C_MULT=55, PONTOVIRGULA=56, DOISPONTOS=57, VIRGULA=58, PONTO=59, 
		PARENTESES=60, PARENTESES_E=61, CHAVE=62, CHAVE_E=63, COCH=64, COCH_E=65, 
		ID=66, RETORNO=67, COUT=68, CIN=69, ESPACOEMBRANCO=70;
	public static final int
		RULE_prog = 0, RULE_funcoes = 1, RULE_parametros = 2, RULE_bloco = 3, 
		RULE_comandos = 4, RULE_imprimir = 5, RULE_ler = 6, RULE_retorno = 7, 
		RULE_chamadaFuncao = 8, RULE_parametrosChamada = 9, RULE_condicionais = 10, 
		RULE_iffi = 11, RULE_elsese = 12, RULE_elseiffi = 13, RULE_whiles = 14, 
		RULE_fors = 15, RULE_dos = 16, RULE_switchs = 17, RULE_cases = 18, RULE_defaults = 19, 
		RULE_declaracoes = 20, RULE_multidimensional = 21, RULE_declaracoesArray = 22, 
		RULE_subArrayDeclaracoes = 23, RULE_atribuicoes = 24, RULE_atribuicoesIncEDec = 25, 
		RULE_tipoComVoid = 26, RULE_tipo = 27, RULE_expressao = 28, RULE_operations = 29, 
		RULE_op_rel = 30, RULE_op_neg = 31, RULE_op_bitwise = 32, RULE_op_arit_baixa = 33, 
		RULE_op_logica = 34, RULE_val_final = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "funcoes", "parametros", "bloco", "comandos", "imprimir", "ler", 
			"retorno", "chamadaFuncao", "parametrosChamada", "condicionais", "iffi", 
			"elsese", "elseiffi", "whiles", "fors", "dos", "switchs", "cases", "defaults", 
			"declaracoes", "multidimensional", "declaracoesArray", "subArrayDeclaracoes", 
			"atribuicoes", "atribuicoesIncEDec", "tipoComVoid", "tipo", "expressao", 
			"operations", "op_rel", "op_neg", "op_bitwise", "op_arit_baixa", "op_logica", 
			"val_final"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'end'", "'break'", "'define'", "'int'", "'string'", 
			"'char'", "'bool'", "'float'", "'double'", "'void'", "'if'", "'elseif'", 
			"'else'", "'try'", "'catch'", "'endif'", "'switch'", "'case'", "'defaultcase'", 
			"'for'", "'while'", "'do'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", 
			"'=='", "'<'", "'>'", "'<='", "'>='", "'!='", "'&&'", "'||'", "'!'", 
			"'true'", "'false'", "'>>'", "'<<'", "'&'", "'|'", "'~'", "'^'", null, 
			null, null, null, null, null, null, null, null, "';'", "':'", "','", 
			"'.'", "'('", "')'", "'{'", "'}'", "'['", "']'", null, "'return'", "'cout'", 
			"'cin'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INICIO", "FIM", "BREAK", "DEFINE", "INT", "STRING", "CHAR", "BOOLEAN", 
			"FLOAT", "DOUBLE", "VOID", "IF", "ELSEIF", "ELSE", "TRY", "CATCH", "ENDIF", 
			"SWITCH", "CASE", "DEFAULTCASE", "FOR", "WHILE", "DO", "SOMA", "SUB", 
			"MULT", "DIV", "RESTO", "ATRIBU", "IGUAL", "MENOQ", "MAIOQ", "MENOIG", 
			"MAIOIG", "DIF", "EE", "OUOU", "NEGA", "TRUE", "FALSE", "BIT_PD", "BIT_PE", 
			"BIT_AND", "BIT_OR", "BIT_NOT", "BIT_XOR", "N_DOUBLE", "N_FLOAT", "N_BIN", 
			"N_INT", "N_HEX", "E_STRING", "E_CHAR", "C_LINHA", "C_MULT", "PONTOVIRGULA", 
			"DOISPONTOS", "VIRGULA", "PONTO", "PARENTESES", "PARENTESES_E", "CHAVE", 
			"CHAVE_E", "COCH", "COCH_E", "ID", "RETORNO", "COUT", "CIN", "ESPACOEMBRANCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Linguagem.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LinguagemParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(LinguagemParser.INICIO, 0); }
		public TerminalNode CHAVE() { return getToken(LinguagemParser.CHAVE, 0); }
		public TerminalNode CHAVE_E() { return getToken(LinguagemParser.CHAVE_E, 0); }
		public TerminalNode FIM() { return getToken(LinguagemParser.FIM, 0); }
		public List<DeclaracoesContext> declaracoes() {
			return getRuleContexts(DeclaracoesContext.class);
		}
		public DeclaracoesContext declaracoes(int i) {
			return getRuleContext(DeclaracoesContext.class,i);
		}
		public List<FuncoesContext> funcoes() {
			return getRuleContexts(FuncoesContext.class);
		}
		public FuncoesContext funcoes(int i) {
			return getRuleContext(FuncoesContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(INICIO);
			setState(73);
			match(CHAVE);
			setState(77);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(74);
					declaracoes();
					}
					} 
				}
				setState(79);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				funcoes();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << CHAR) | (1L << BOOLEAN) | (1L << FLOAT) | (1L << DOUBLE) | (1L << VOID) | (1L << N_BIN) | (1L << N_HEX))) != 0) );
			setState(85);
			match(CHAVE_E);
			setState(86);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncoesContext extends ParserRuleContext {
		public TipoComVoidContext tipoComVoid() {
			return getRuleContext(TipoComVoidContext.class,0);
		}
		public TerminalNode ID() { return getToken(LinguagemParser.ID, 0); }
		public TerminalNode PARENTESES() { return getToken(LinguagemParser.PARENTESES, 0); }
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TerminalNode PARENTESES_E() { return getToken(LinguagemParser.PARENTESES_E, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public FuncoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterFuncoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitFuncoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitFuncoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncoesContext funcoes() throws RecognitionException {
		FuncoesContext _localctx = new FuncoesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funcoes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(88);
			tipoComVoid();
			setState(89);
			match(ID);
			setState(90);
			match(PARENTESES);
			setState(91);
			parametros();
			setState(92);
			match(PARENTESES_E);
			setState(93);
			bloco();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public List<TerminalNode> ID() { return getTokens(LinguagemParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LinguagemParser.ID, i);
		}
		public MultidimensionalContext multidimensional() {
			return getRuleContext(MultidimensionalContext.class,0);
		}
		public List<TerminalNode> VIRGULA() { return getTokens(LinguagemParser.VIRGULA); }
		public TerminalNode VIRGULA(int i) {
			return getToken(LinguagemParser.VIRGULA, i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterParametros(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitParametros(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitParametros(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << CHAR) | (1L << BOOLEAN) | (1L << FLOAT) | (1L << DOUBLE) | (1L << N_BIN) | (1L << N_HEX))) != 0)) {
				{
				setState(110);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(95);
					tipo();
					setState(96);
					match(ID);
					setState(103);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==VIRGULA) {
						{
						{
						setState(97);
						match(VIRGULA);
						setState(98);
						tipo();
						setState(99);
						match(ID);
						}
						}
						setState(105);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case 2:
					{
					{
					setState(106);
					tipo();
					setState(107);
					match(ID);
					setState(108);
					multidimensional();
					}
					}
					break;
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public TerminalNode CHAVE() { return getToken(LinguagemParser.CHAVE, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode CHAVE_E() { return getToken(LinguagemParser.CHAVE_E, 0); }
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bloco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(CHAVE);
			setState(115);
			comandos();
			setState(116);
			match(CHAVE_E);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandosContext extends ParserRuleContext {
		public List<CondicionaisContext> condicionais() {
			return getRuleContexts(CondicionaisContext.class);
		}
		public CondicionaisContext condicionais(int i) {
			return getRuleContext(CondicionaisContext.class,i);
		}
		public List<TerminalNode> PONTOVIRGULA() { return getTokens(LinguagemParser.PONTOVIRGULA); }
		public TerminalNode PONTOVIRGULA(int i) {
			return getToken(LinguagemParser.PONTOVIRGULA, i);
		}
		public List<RetornoContext> retorno() {
			return getRuleContexts(RetornoContext.class);
		}
		public RetornoContext retorno(int i) {
			return getRuleContext(RetornoContext.class,i);
		}
		public List<DeclaracoesContext> declaracoes() {
			return getRuleContexts(DeclaracoesContext.class);
		}
		public DeclaracoesContext declaracoes(int i) {
			return getRuleContext(DeclaracoesContext.class,i);
		}
		public List<AtribuicoesContext> atribuicoes() {
			return getRuleContexts(AtribuicoesContext.class);
		}
		public AtribuicoesContext atribuicoes(int i) {
			return getRuleContext(AtribuicoesContext.class,i);
		}
		public List<ChamadaFuncaoContext> chamadaFuncao() {
			return getRuleContexts(ChamadaFuncaoContext.class);
		}
		public ChamadaFuncaoContext chamadaFuncao(int i) {
			return getRuleContext(ChamadaFuncaoContext.class,i);
		}
		public List<ImprimirContext> imprimir() {
			return getRuleContexts(ImprimirContext.class);
		}
		public ImprimirContext imprimir(int i) {
			return getRuleContext(ImprimirContext.class,i);
		}
		public List<LerContext> ler() {
			return getRuleContexts(LerContext.class);
		}
		public LerContext ler(int i) {
			return getRuleContext(LerContext.class,i);
		}
		public ComandosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comandos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterComandos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitComandos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitComandos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandosContext comandos() throws RecognitionException {
		ComandosContext _localctx = new ComandosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_comandos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << STRING) | (1L << CHAR) | (1L << BOOLEAN) | (1L << FLOAT) | (1L << DOUBLE) | (1L << IF) | (1L << SWITCH) | (1L << FOR) | (1L << WHILE) | (1L << DO) | (1L << N_BIN) | (1L << N_HEX))) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (ID - 66)) | (1L << (RETORNO - 66)) | (1L << (COUT - 66)) | (1L << (CIN - 66)))) != 0)) {
				{
				setState(129);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IF:
				case SWITCH:
				case FOR:
				case WHILE:
				case DO:
					{
					setState(118);
					condicionais();
					}
					break;
				case INT:
				case STRING:
				case CHAR:
				case BOOLEAN:
				case FLOAT:
				case DOUBLE:
				case N_BIN:
				case N_HEX:
				case ID:
				case RETORNO:
				case COUT:
				case CIN:
					{
					{
					setState(125);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						setState(119);
						retorno();
						}
						break;
					case 2:
						{
						setState(120);
						declaracoes();
						}
						break;
					case 3:
						{
						setState(121);
						atribuicoes();
						}
						break;
					case 4:
						{
						setState(122);
						chamadaFuncao();
						}
						break;
					case 5:
						{
						setState(123);
						imprimir();
						}
						break;
					case 6:
						{
						setState(124);
						ler();
						}
						break;
					}
					setState(127);
					match(PONTOVIRGULA);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImprimirContext extends ParserRuleContext {
		public TerminalNode COUT() { return getToken(LinguagemParser.COUT, 0); }
		public TerminalNode PARENTESES() { return getToken(LinguagemParser.PARENTESES, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public TerminalNode PARENTESES_E() { return getToken(LinguagemParser.PARENTESES_E, 0); }
		public ImprimirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprimir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterImprimir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitImprimir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitImprimir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprimirContext imprimir() throws RecognitionException {
		ImprimirContext _localctx = new ImprimirContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_imprimir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(COUT);
			setState(135);
			match(PARENTESES);
			setState(136);
			expressao();
			setState(137);
			match(PARENTESES_E);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LerContext extends ParserRuleContext {
		public TerminalNode CIN() { return getToken(LinguagemParser.CIN, 0); }
		public TerminalNode PARENTESES() { return getToken(LinguagemParser.PARENTESES, 0); }
		public ComandosContext comandos() {
			return getRuleContext(ComandosContext.class,0);
		}
		public TerminalNode PARENTESES_E() { return getToken(LinguagemParser.PARENTESES_E, 0); }
		public LerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ler; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterLer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitLer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitLer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LerContext ler() throws RecognitionException {
		LerContext _localctx = new LerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ler);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(CIN);
			setState(140);
			match(PARENTESES);
			setState(141);
			comandos();
			setState(142);
			match(PARENTESES_E);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetornoContext extends ParserRuleContext {
		public TerminalNode RETORNO() { return getToken(LinguagemParser.RETORNO, 0); }
		public ExpressaoContext expressao() {
			return getRuleContext(ExpressaoContext.class,0);
		}
		public RetornoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_retorno; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterRetorno(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitRetorno(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitRetorno(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetornoContext retorno() throws RecognitionException {
		RetornoContext _localctx = new RetornoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_retorno);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(RETORNO);
			setState(145);
			expressao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChamadaFuncaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LinguagemParser.ID, 0); }
		public TerminalNode PARENTESES() { return getToken(LinguagemParser.PARENTESES, 0); }
		public ParametrosChamadaContext parametrosChamada() {
			return getRuleContext(ParametrosChamadaContext.class,0);
		}
		public TerminalNode PARENTESES_E() { return getToken(LinguagemParser.PARENTESES_E, 0); }
		public ChamadaFuncaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chamadaFuncao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).enterChamadaFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LinguagemListener ) ((LinguagemListener)listener).exitChamadaFuncao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LinguagemVisitor ) return ((LinguagemVisitor<? extends T>)visitor).visitChamadaFuncao(this);
			else return visitor.visitChildren(this);
		}
	}
